Make border visible, fix multiple columns layout

--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -3052,6 +3052,14 @@ body.embed .button.logo-button:hover,
   border-radius: 16px;
 }
 
+/* Make border shown */
+.layout-single-column .audio-player,
+.layout-single-column .video-player,
+.layout-single-column .media-gallery,
+.layout-single-column .media-gallery__item {
+  overflow: visible;
+}
+
 .layout-single-column .media-gallery__item-thumbnail:has(> img:not([alt])):focus::after,
 .layout-single-column .video-player:has(> video:not([title])):focus::after,
 .layout-single-column .media-gallery__gifv:has(> video:not([title])):focus::after,
